<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalkAbout</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_waypoint_detail">Waypoint Detail</string>
    <string name="title_activity_waypoint_map">Waypoint Map</string>
    <string name="title_activity_move_photos_between_waypoints">Move Photos</string>
    <string name="title_activity_delete_photos_from_waypoint">Delete Photos</string>
    <string name="description_label">Description:</string>
    <string name="date_label">Date:</string>
    <string name="OK_button_label">OK</string>
    <string name="move_button_label">Move Photos</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="description_hint">waypoint description</string>
    <string name="menu_new">New Waypoint</string>
    <string name="menu_move_photos">Move Photos</string>
    <string name="locationButton">Location:</string>
    <string name="locationButtonUnknown">Location: unknown</string>
    <string name="title_activity_photo_list">PhotoList</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_content">Dummy Value</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="edit_waypoint_text">Edit Waypoint</string>
    <string name="delete_waypoint_text">Delete Waypoint</string>
    <string name="delete_image_text">Delete Waypoint</string>
    <string name="delete_photos_text">Delete Photos</string>
    <string name="import_image_text">Import Image</string>
    <string name="map_waypoint_text">Map Waypoint</string>
    <string name="delete_waypoint_message">This action will delete the current waypoint and all associated images.  Are you sure?</string>
    <string name="delete_image_message">This action will delete the selected image.  Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camera_not_available_text">The camera is not available on this device.</string>
    <string name="fnyi">Functionality Not Yet Implemented</string>
    <string name="change_ascending_text_waypoint">Waypoint Order</string>
    <string name="change_ascending_text_photo">Photo Order</string>
    <string name="select_waypoint_label">Copy To Waypoint</string>
    <string name="error_message">An error has been encountered in the application</string>
    <string name="error_message_new_waypoint">Error adding new Waypoint.</string>
    <string name="error_message_change_sort">Error changing sorting.</string>
    <string name="error_message_load_data">Error loading data.</string>
    <string name="error_message_edit_waypoint">Error editing Waypoint.</string>
    <string name="error_message_delete_waypoint">Error deleting Waypoint.</string>
    <string name="error_message_move_photos">Error moving photos between Waypoints.</string>
    <string name="error_message_delete_photos">Error deleting photos between Waypoints.</string>
    <string name="error_message_location">Error getting location.</string>
    <string name="error_message_location_not_available">Location Services are not enabled on this device, cannot access GPS.</string>
    <string name="move_to_label">Move To Waypoint:</string>
    <string name="select_photos_label">Select Photos</string>
    <string name="waypoint_move_from">Move From Waypoint:</string>
    <string name="delete_from">Delete From Waypoint:</string>
    
</resources>