<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/camera"
        android:icon="@drawable/camera"
        android:showAsAction="always"
        android:title=""/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/action_settings"
        android:showAsAction="always"
        android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/edit_waypoint"
                android:icon="@drawable/waypoint_edit"
                android:showAsAction="always"
                android:title="@string/edit_waypoint_text"/>
            <item
                android:id="@+id/delete_waypoint"
                android:icon="@drawable/waypoint_delete"
                android:showAsAction="always"
                android:title="@string/delete_waypoint_text"/>
            <item
                android:id="@+id/import_image"
                android:icon="@drawable/add_picture"
                android:showAsAction="always"
                android:title="@string/import_image_text"/>
            <item
                android:id="@+id/map_waypoint"
                android:icon="@drawable/map"
                android:showAsAction="always"
                android:title="@string/map_waypoint_text"/>
            <item
                android:id="@+id/change_sort"
                android:icon="@drawable/resort"
                android:showAsAction="always"
                android:title="@string/change_ascending_text"/>
        </menu>
    </item>

</menu>